--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,12 @@
             <version>1.9.1</version>
         </dependency>
         <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.3</version>
+      <scope>compile</scope>
+    </dependency>
+        <dependency>
             <groupId>com.codahale.metrics</groupId>
             <artifactId>metrics-core</artifactId>
         </dependency>
