--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,11 @@
     "angular-translate-loader-static-files": "2.2.0",
     "angular-dynamic-locale": "0.1.1",
     "angular-i18n": "1.2.22",
-    "swagger-ui": "2.0.18"
+    "swagger-ui": "2.0.18",
+    "ng-chartistjs": "~1.1.0",
+    "d3": "~3.4.13",
+    "nvd3": "~1.1.15-beta",
+    "angularjs-nvd3-directives": "~0.0.7"
   },
   "devDependencies": {
     "angular-mocks": "1.2.22",
