--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,7 @@
     "angularjs-nvd3-directives": "~0.0.7",
     "angular-bootstrap": "~0.12",
     "raphael" : "2.1.1",
-    "justgage-bower" : "latest"
+    "justgage" : "latest"
   },
   "devDependencies": {
     "angular-mocks": "1.2.22",
