email activation working

--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -31,7 +31,14 @@ spring:
             hibernate.generate_statistics: true
 
     mail:
-        baseUrl: http://localhost:8080
+        host: localhost
+        port: 2500
+        user: 
+        password: 
+        protocol: smtp
+        tls: false
+        auth: false
+        from: me@localhost
 
     thymeleaf:
         mode: XHTML
