--- a/bower.json
+++ b/bower.json
@@ -22,8 +22,9 @@
     "nvd3": "~1.1.15-beta",
     "angularjs-nvd3-directives": "~0.0.7",
     "angular-bootstrap": "~0.12",
-    "raphael" : "2.1.1",
-    "justgage" : "latest"
+    "raphael": "2.1.1",
+    "justgage": "latest",
+    "ng-flow": "~2"
   },
   "devDependencies": {
     "angular-mocks": "1.2.22",
